Mon Nov  5 22:45:03 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* ext/dl/win32/lib/Win32API.rb (Win32API#call): use 64bit pointer for x64
	  Windows. This would fix
	  TestSecureRandom#test_s_random_bytes_without_openssl error.
	  [ruby-core:47451] [Bug #6990]

Mon Nov  5 22:09:26 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* cygwin/GNUmakefile.in (uncommon.mk): link *.res.o.
	  EXTOBJES is defined in uncommon.mk. *.res.o setting should be below
	  uncommon.mk.
	  [ruby-core:48858] [Bug #7277]

Mon Nov  5 11:35:11 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (native_thread_init, native_thread_destroy):
	  removed HAVE_PTHREAD_CONDATTR_INIT check because this silly
	  #ifdef makes use-uninitialized-var issue and (2) native_cond_initialize()
	  already have a right platform and caller don't need any additional care.
	  [Bug #6825]

Mon Nov  5 10:57:59 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi/core.rb: check if Tempfile is defined before use it.

	* lib/cgi/core.rb: remove tempfiles only if tempfiles exist

Mon Nov  5 12:17:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* lib/uri/http.rb (URI::HTTP.build): Fix example
	  Patch by Carina C. Zona
	  [Fixes #209 Github]

Mon Nov  5 09:55:05 2012  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/core.rb: remove tempfile more early.

Sun Nov  4 20:29:46 2012  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi.rb, lib/cgi/*/rb: rename CGI#header to CGI#http_header,
	  add  and update HTML5 tag generater.  [Bug #7110]
	  Patch provided by Marcus Stollsteimer, thank you !

Sun Nov  4 11:47:39 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* lib/fileutils.rb (module FileUtils): repatch [ruby-core:39622]
	  [Feature #5337]. improve performance of FileUtils.compare_stream.
	  [ruby-core:47545] [Feature #7028]

Sun Nov  4 11:27:54 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (recursive_equal): fix to return true when self and other